--- a/src/app/restrict/expense/add-expenses/add-variable-expense/add-variable-expense.component.html
+++ b/src/app/restrict/expense/add-expenses/add-variable-expense/add-variable-expense.component.html
@@ -1,8 +1,9 @@
+<!--add variable expense-->
 <div class="container">
-  <h1 class="text-title">{{ types[1] }}</h1>
+  <h1 class="text-blue">{{ expenseType.name }}</h1><br>
+  <div class="expense-description"> {{ expenseType.description }} </div>
 </div>
-<hr>
-
+<br>
 <!--form expenses-->
 <form (ngSubmit)="onSubmit()" #form="ngForm">
   <div class="container-fluid">
@@ -14,12 +15,11 @@
           #name="ngModel">
         <span class="help-block" *ngIf="name.invalid && name.touched"> O nome da despesa é obrigatório</span>
       </div>
-      <!-- expense type -->
+      <!--currency-->
       <div class="col-sm-6">
-        <label for="type">Tipo da despesa:</label>
-        <select required id="type" name="type" class="form-control ml-1" [(ngModel)]="expense.expenseSubtype"
-          #type="ngModel">
-          <option *ngFor="let subtype of subtypes" [ngValue]="subtype">{{ subtype }}</option>
+        <label for="currency">Moeda:</label>
+        <select required id="currency" name="currency" class="form-control ml-1" [(ngModel)]="expense.currency">
+            <option *ngFor="let currency of currencies" [value]="currency.name"> {{ currency.name }} </option>
         </select>
       </div>
     </div>
@@ -31,14 +31,6 @@
         <input required id="date" name="date" type="text" class="form-control" [(ngModel)]="expense.expenseDate"
           bsDatepicker [bsConfig]="bsConfig">
       </div>
-      <!--currency-->
-      <div class="col-sm-6">
-        <label for="currency">Moeda:</label>
-        <select required id="currency" name="currency" class="form-control ml-1" [(ngModel)]="expense.currency"
-          #currency="ngModel">
-          <option *ngFor="let currency of currencies" [ngValue]="currency"> {{ currency }} </option>
-        </select>
-      </div>
     </div>
     <br>
     <div class="row">
@@ -46,7 +38,7 @@
       <div class="col-sm-12">
         <label>Observações:</label>
         <textarea name="expenseName" type="text" rows="2" class="form-control ml-1"
-          [(ngModel)]="expense.expenseDescription"></textarea>
+          [(ngModel)]="expense.comments"></textarea>
       </div>
     </div>
   </div>
