--- a/src/app/restrict/expense/add-expenses/add-fixed-expense/add-fixed-expense.component.html
+++ b/src/app/restrict/expense/add-expenses/add-fixed-expense/add-fixed-expense.component.html
@@ -15,22 +15,19 @@
                     [(ngModel)]="expense.expenseName" #name="ngModel">
                 <span class="help-block" *ngIf="!name.valid && name.touched"> O nome da despesa é obrigatório</span>
             </div>
-            <!-- currency -->
-            <div class="col-sm-6">
-                <label for="currency">Moeda:</label>
-                <select required id="currency" name="currency" class="form-control ml-1" [(ngModel)]="expense.currency">
-                    <option *ngFor="let currency of currencies" [value]="currency.name"> {{ currency.name }} </option>
-                </select>
-            </div>
-        </div>
-        <br>
-        <div class="row">
             <!--expense date-->
             <div class="col-sm-6">
                 <label for="date" class="control-label">Data da despesa:</label>
                 <input required id="date" name="date" type="text" class="form-control" [(ngModel)]="expense.expenseDate"
                     bsDatepicker [bsConfig]="bsConfig">
             </div>
+            <!-- currency -->
+            <!-- <div class="col-sm-6">
+                <label for="currency">Moeda:</label>
+                <select required id="currency" name="currency" class="form-control ml-1" [(ngModel)]="expense.currency">
+                    <option *ngFor="let currency of currencies" [value]="currency.name"> {{ currency.name }} </option>
+                </select>
+            </div> -->
         </div>
         <br>
         <!--month reference -->
